# pastas-plugins

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python_publish.yml  test_format_lint.yml  test_unit_pytests.yml
docs/: conf.py  developers.rst  index.rst
docs/examples/: crosscorrelation_seriesJ.ipynb  index.rst  modflow.ipynb  modflow_api.ipynb  modflow_drn.ipynb  modflow_newstyle.ipynb  modflow_newstyle_api.ipynb  modflow_uzf.ipynb  modflow_uzf_newstyle.ipynb  pest_linear_regression.ipynb  pest_linear_regression_ies.ipynb  pest_pastas.ipynb  pest_pastas_glm_hp.ipynb  pest_pastas_ies.ipynb  pest_pastas_responsesurface.ipynb  pest_pastas_sen.ipynb  randomized_maximum_likelihood.ipynb  responses.ipynb  responses_parameters.ipynb
docs/examples/data/: SeriesJ.csv  _run_linreg_update.py  aftopping.csv
docs/plugins/: cross_correlation.rst  index.rst  modflow.rst  pest.rst  reservoirs.rst  responses.rst
pastas_plugins/: __init__.py
pastas_plugins/cross_correlation/: __init__.py  crosscorr.py  plots.py
pastas_plugins/crosscorrelation/: __init__.py  crosscorr.py  plots.py
pastas_plugins/modflow/: __init__.py  modflow.py  stressmodels.py
pastas_plugins/modflow2/: __init__.py  modflow.py  stressmodels.py
pastas_plugins/pest/: __init__.py  _run_pastas_model.py  solver.py
pastas_plugins/reservoirs/: __init__.py  reservoir.py  stressmodels.py
pastas_plugins/responses/: __init__.py  parameters.py  rfunc.py  rfunc_utils.py
tests/: test_crosscorrelation.py  test_modflow.py  test_pastas_plugins_base.py  test_reservoirs.py  test_responses.py  test_rmlsolver.py
