[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pastas_plugins"
dynamic = ["version"]
description = "Repository containing plugins to further enhance your pastas experience."
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Pastas Developers Team" }]
maintainers = [
        { name = "D.A. Brakenhoff", email = "d.brakenhoff@artesia-water.nl" },
        { name = "M.A. Vonk", email = "m.vonk@artesia-water.nl" },
        { name = "M. Bakker", email = "markbak@gmail.com" },
]

requires-python = ">= 3.10"
dependencies = ["pastas"]
keywords = ["hydrology", "groundwater", "timeseries", "analysis"]
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'Intended Audience :: Other Audience',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3 :: Only',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Topic :: Scientific/Engineering :: Hydrology',
]

[project.urls]
homepage = "https://pastas.dev"
repository = "https://github.com/pastas/pastas-plugins"
documentation = "https://pastas.readthedocs.io"

[project.optional-dependencies]
all = ["pastas_plugins[modflow,crosscorrelation,pest]"]
crosscorrelation = ["statsmodels"]
modflow = ["flopy"]
pest = ["pyemu>=1.3.8", "tqdm"]
reservoirs = ["pastas_plugins"] # placeholder for empty dependencies
responses = ["pastas_plugins"] # placeholder for empty dependencies
ruffing = ["ruff"]
pytesting = ["pytest>=7", "pytest-cov", "pytest-sugar"]
ci = ["coverage"]
rtd = [
        "pastas_plugins[all]",
        "sphinx_rtd_theme",
        "myst_nb",
        "numpydoc",
        "sphinx_design",
        "tqdm",
        "xarray",
        "cmcrameri",
]

[tool.setuptools.dynamic]
version = { attr = "pastas_plugins.version.__version__" }

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
show-fixes = true
fix = true

[tool.tox]
env_list = ["py{310,311,312,313}"]

[tool.tox.env_run_base]
description = "run unit tests"
extras = ["pytesting"]

[tool.tox.env.all]
description = "run all unit tests and obtain coverage"
extras = ["ci", "pytesting", "all"]
commands = [["coverage", "run", "-m", "pytest", "tests"], ["coverage", "xml"]]

[tool.tox.env.cross_correlation]
description = "run all unit tests for cross_correlation plugin"
extras = ["pytesting", "crosscorrelation"]
commands = [["pytest", "tests/test_crosscorrelation.py"]]

[tool.tox.env.modflow]
description = "run all unit tests for modflow plugin"
extras = ["pytesting", "modflow"]
commands = [["pytest", "tests/test_modflow.py"]]

[tool.tox.env.responses]
description = "run all unit tests for responses plugin"
extras = ["pytesting", "responses"]
commands = [["pytest", "tests/test_responses.py"]]

[tool.tox.env.reservoirs]
description = "run all unit tests for reservoirs plugin"
extras = ["pytesting", "reservoirs"]
commands = [["pytest", "tests/test_reservoirs.py"]]

[tool.tox.env.rml_solver]
description = "run all unit tests for rml_solver plugin"
extras = ["pytesting", "pest"]
commands = [["pytest", "tests/test_rmlsolver.py"]]

[tool.tox.env.ruff]
description = "run ruff checks"
extras = ["ruffing"]
commands = [
        [
                "ruff",
                "check",
                "--extend-select",
                "I",
                "--preview",
        ],
        [
                "ruff",
                "format",
                "--check",
        ],
]
